--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@ import requests
 from bs4 import BeautifulSoup
 import json
 import datetime
-import base64  # ★ 핵심: 깨짐 방지용 인코딩 라이브러리
+import base64
+import os
 
 # ---------------------------------------------------------
 # [1] 설정 및 크롤링 로직 (네이버 뉴스)
